# gmail-agent

./: .env.example  .gitignore  404.html  CLAUDE.md  LICENSE  README.md  app.py  config.py  index.html  mkdocs.yml  pyproject.toml  sitemap.xml  test_llama_text_infenrece.py
.claude/docs/: architectural_patterns.md
.github/workflows/: ci.yml  docs.yml
agent/: __init__.py  approval.py  classifier.py  drafter.py  scheduler.py
auth/: __init__.py  google_auth.py
configuration/reference/: index.html
db/: __init__.py  database.py  models.py
docs/: index.md  portfolio.md
docs/configuration/: reference.md
docs/features/: calendar.md  drafts.md  inbox.md  settings.md
docs/getting-started/: first-run.md  google-setup.md  huggingface-setup.md  installation.md
docs/troubleshooting/: faq.md
features/calendar/: index.html
features/drafts/: index.html
features/inbox/: index.html
features/settings/: index.html
getting-started/first-run/: index.html
getting-started/google-setup/: index.html
getting-started/huggingface-setup/: index.html
getting-started/installation/: index.html
portfolio/: index.html
search/: search_index.json
services/: __init__.py  calendar_service.py  gmail_service.py  llm_service.py
tests/: __init__.py  test_approval.py  test_calendar_service.py  test_classifier.py  test_gmail_service.py
troubleshooting/faq/: index.html
ui/: __init__.py  calendar_view.py  draft_view.py  inbox_view.py  settings_view.py
